--- a/e-commers/index.html
+++ b/e-commers/index.html
@@ -15,7 +15,7 @@
   <!-- nvabar -->
   <header>
     <nav class="navbar flex container">
-      <a href="#" class="logo"> Buzz <span>Buy.</span> </a>
+      <a href="#" class="logo"> kash<span>ora.</span> </a>
 
       <ul class="navlist flex">
         <li>
@@ -439,7 +439,7 @@
 
       <ul class="footer-list">
         <li class="footer-logo">
-          <a href="#" class="logo"> Buzz <span>Buy.</span> </a>
+          <a href="#" class="logo"> kash<span>ora.</span> </a>
         </li>
         <li>
           <p class="detail">
@@ -462,7 +462,7 @@
 
       <div class="footer-bottom">
         <p>Copyrigth &copy;2025
-          <a href="#" class="footer-link"> BuzzBuy.</a>
+          <a href="#" class="footer-link"> Kashora..</a>
         </p>
       </div>
 
@@ -470,7 +470,7 @@
 
     <div class="footer-bottom">
       <p>Copyrigth &copy;2025
-        <a href="#" class="footer-link"> BuzzBuy.</a>
+        <a href="#" class="footer-link"> Kashora..</a>
       </p>
     </div>
   </footer>
